Fixed '>' and turned side scrollbars back on

--- a/client/app/styles/style.css
+++ b/client/app/styles/style.css
@@ -31,7 +31,6 @@ div.horizontal {
 }
 
 div.horizontal::-webkit-scrollbar {
-  display: none;
 }
 
 .table {
